--- a/ThreeSchool/app/build.gradle
+++ b/ThreeSchool/app/build.gradle
@@ -46,8 +46,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation files('libs\\poi-4.1.2.jar')
-    testImplementation 'junit:junit:4.+'
+    implementation files('libs\\poi-3.17.jar')
+    testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
