--- a/ThreeSchool/app/src/main/AndroidManifest.xml
+++ b/ThreeSchool/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.project.threeschool">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -11,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ThreeSchool">
-        <activity android:name=".view.NormalActivity"></activity>
+        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
+        <activity android:name=".view.NormalActivity" />
         <activity
             android:name=".view.GroupActivity"
             android:screenOrientation="portrait" />
