--- a/ThreeSchool/app/src/main/AndroidManifest.xml
+++ b/ThreeSchool/app/src/main/AndroidManifest.xml
@@ -11,15 +11,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.ThreeSchool">
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
-        <activity android:name=".view.NormalActivity" />
         <activity
             android:name=".view.GroupActivity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".view.MainActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
